# agent-skills-manager

./: README.md  pyproject.toml
skill/agent-skills-manager/: SKILL.md
skill/agent-skills-manager/agents/: openai.yaml
skill/agent-skills-manager/references/: antigravity.md  claude-code.md  codex.md  commands.md  cursor.md
skill/agent-skills-manager/scripts/: agent_profiles.json  asm.py
skill/agent-skills-manager/scripts/asm_lib/: __init__.py  diffing.py  inventory.py  models.py  operations.py  paths.py  store.py
src/agent_skills_manager/: __init__.py  cli.py
src/agent_skills_manager/adapters/: __init__.py  agent_registry.py
src/agent_skills_manager/config/: __init__.py  settings.py
src/agent_skills_manager/domain/: __init__.py  models.py
src/agent_skills_manager/infrastructure/: __init__.py  mcp_reader.py  skill_store.py
src/agent_skills_manager/resources/: __init__.py  agents.yaml
src/agent_skills_manager/services/: __init__.py  detector.py  inventory.py  skill_import.py  skill_removal.py  skill_sync.py
src/agent_skills_manager/tui/: __init__.py  app.py  grouping.py  layout.py  theme.tcss
src/agent_skills_manager/tui/screens/: __init__.py  agent_detail.py  confirm.py  dashboard.py
src/agent_skills_manager/tui/widgets/: __init__.py  skill_tree.py
tests/: test_bundled_skill_script.py  test_cli.py  test_detector.py  test_inventory.py  test_layout.py  test_mcp_inventory.py  test_settings.py  test_skill_grouping.py  test_skill_import.py  test_skill_removal.py  test_skill_sync.py  test_tui.py
