[project]
name = "agent-skills-manager"
version = "0.1.0"
description = "A simple cross-platform TUI for local AI agent skills and MCP visibility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.10.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "textual>=8.2.8",
]

[project.scripts]
agent-skills-manager = "agent_skills_manager.cli:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py311"
